<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2024 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="single_buttons"
        app:title="@string/single_buttons_title">

        <ListPreference
            app:defaultValue="shutter"
            app:entries="@array/gesture_actions_no_default_no_two_way_entries"
            app:entryValues="@array/gesture_actions_no_default_no_two_way_values"
            app:iconSpaceReserved="false"
            app:key="camera_button_action"
            app:title="@string/camera_button_action_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="focus"
            app:entries="@array/gesture_actions_no_default_no_two_way_entries"
            app:entryValues="@array/gesture_actions_no_default_no_two_way_values"
            app:iconSpaceReserved="false"
            app:key="focus_button_action"
            app:title="@string/focus_button_action_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="volume_buttons"
        app:title="@string/volume_buttons_title">

        <ListPreference
            app:defaultValue="shutter"
            app:entries="@array/gesture_actions_entries"
            app:entryValues="@array/gesture_actions_values"
            app:iconSpaceReserved="false"
            app:key="volume_buttons_action"
            app:title="@string/volume_buttons_action_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="volume_buttons_invert"
            app:summary="@string/volume_buttons_invert_summary"
            app:title="@string/volume_buttons_invert_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="zoom_buttons"
        app:title="@string/zoom_buttons_title">

        <ListPreference
            app:defaultValue="zoom"
            app:entries="@array/gesture_actions_no_default_entries"
            app:entryValues="@array/gesture_actions_no_default_values"
            app:iconSpaceReserved="false"
            app:key="zoom_buttons_action"
            app:title="@string/zoom_buttons_action_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="zoom_buttons_invert"
            app:summary="@string/zoom_buttons_invert_summary"
            app:title="@string/zoom_buttons_invert_title" />

    </PreferenceCategory>

</PreferenceScreen>
